themes/lagunita/less/_base-responsive.less
// All UComm less files should include this
@import "_less.less";


//////////////////////////
// phone
@media (max-width: @screen-xs-max) {
.size-detect-xs { display:inline; }
body {
	padding: 0;
}
#header .container {
	padding: 0 10px;
}
#body .container {
	padding: 0 20px;
}
#body .container:first-child {
	padding: 0;
}
#logo {
	max-width: 300px;
}

#nav-search {
  width: 300px;
}
#search-form {
  #search-field {
    width: 175px;
    .font-size-em(12);
  }
  .btn-search {
    width: 22px;
    height: 22px;
    top: 5px;
    right: 5px;	
  }
} // #block-search-form

.postcard-left,
.postcard-right {
  
  & > div {
    display: block;
    position: relative;
  }


  .postcard-text {
    padding-left: 0;
  }
}


#social-icons {
  margin-bottom: 1em;
}


#footer {
  .container {
    padding: 0 20px !important;
  }

  ul.footer-list {
    margin-bottom: 25px;

    li {
      font-size: 1.3em;
      margin-bottom: 10px;
    }
  }

  .block h3 {
    border-bottom: 1px solid @su-red;
    margin-bottom: 10px;
    padding-bottom: 5px;
    font-size: 1.1em;
  }

/* Global Footer and Copyright*/
  #global-footer {
    p.copyright {
      padding: 15px 0;
    }
  }
} // #footer
} // @media (max-width: @screen-xs-max)

//////////////////////////
// phone, tablet
@media (max-width: @screen-sm-max) {
.container {
  padding: 0 15px; // put 15px padding back on left and right
}

#search-field {
  -webkit-appearance:none; 
  left: 0;
}
#search-form #search-btn {
  left: 140px;
  padding: 0;
}

#search-type {
  right: -2px;

  label {
    color: @su-clay;
    font-size: .9em;
  }
}

body.home #nav-home a, body.nav-1 #nav-1 a, 
body.nav-2 #nav-2 a, body.nav-3 #nav-3 a, 
body.nav-4 #nav-4 a, body.nav-5 #nav-5 a, 
body.nav-6 #nav-6 a {
  color: @su-red-text;
  border-bottom: none;
  }

.navbar {
	margin: 5px 0 3px 0;	

  .menu-text {
    display: inline;
    text-transform: uppercase;
    left: 50px;
    top: 7px;
    position: absolute;
    color: @su-red-text;
    font-size: 0.85em;
    font-weight: 700;
  }

  .navbar-toggle {
      background-color: @su-red;
      border: none;
      float: none;
      margin-bottom: 0;
      margin-right: 0;
      margin-top: 1px;
      padding: 7px 10px;

      span.icon-bar {
        background-color: white;
      }
  }

  .navbar-toggle:hover {
    background-color: @su-clay;
  }  

  button.collapsed {
    background-color: @su-red !important; 
  }
  .navbar-collapse {
    width: 100%;

    &.in {
      overflow-y: visible;
    }
  }

  .nav {
    margin: 8px 0 15px 0;

    & > li {
      display: block;
      padding-right: 0;
    
      & > a,
      & > a:focus,
      & > a:hover  {
        display: block;
        border-radius: 3px;
        padding: 9px 15px;	
        margin-right: 0;
        width: 100%;
      }
      & > a:hover,
      & > a:focus {
        background-color: @su-beige-05;
        border-bottom:none;
      }
    } // .nav > li
  } // .nav
} // .navbar

#sidebar-first,
#sidebar-second {
  border-top: 2px solid @su-red;
  padding-top: 15px;
  margin-top: 30px;
}

#feature-banner{
  position: relative;
    
  .feature-caption{
    background-color: @su-beige-bg;
    color: inherit;
    text-shadow: none;
    width: 100%;
    position: static;
    text-align: left;
    padding: 10px;
  
    h3, h4, p {
      display: inline;
      margin: 0;
    }
  
    h3, h4 {
      font-size: 1em;
      font-weight: 600;
      text-transform: uppercase;
      color: @su-red-text;
      margin-right: .4em;
    }
  }

}

} // @media (max-width: @screen-sm-max)


//////////////////////////
// tablet and larger
@media (min-width: @screen-sm-min) {

  #global-footer {
    #bottom-text {
      margin-top: 2px;

      ul {

        li {
          margin:0 15px 3px 0;
          padding:0;
          display:inline-block;
          line-height: 1.5;

          &:last-of-type {
            margin-right: 0;
          }
        }
        &#policy-links {
          li {
            font-weight: 300;
            font-size: unit( round( (13 / unit(@font-size-base)), 5 ), em ); // 13px expressed as em's
          }
        }
      }

      p.copyright {
        font-weight: 300;
        line-height: 1.5;
      }
    }
  }

} // @media (min-width: @screen-sm-min)

//////////////////////////
// tablet only
@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
  .size-detect-sm { display:inline; }
  .col-sm-1-4 { // 5 columns across a 12 column grid = 1.4 column width
    float: left;
    width: 18%;
    margin-right: 2%;
  }

  #search-form #search-btn {
    left: 190px;
  }

  #global-footer {
    #bottom-logo {
      margin-top: 5px;
    }

    #bottom-text {
      text-align: center;

      ul {
        margin-bottom: .5em;

        li {
          font-size: 1.15em;
        }
        &#policy-links {
          li {
            font-size: unit(round((13 / unit(@font-size-base)), 5), em); // 13px expressed as em's
          }
        }
      }

      p.copyright {
        padding-top: 2px;
      }
    }
  }
} // @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max)

//////////////////////////
// desktop
@media (min-width: @screen-md-min) {

  #nav-search {
    float: right;
    margin: -60px 0 0 0;
  }

  .navbar .nav  li {
     a {
        border-bottom: 2px solid @su-beige-10;
        }
     a:hover {
      border-bottom: 2px solid @su-clay;
      color: inherit;
      }
  }

  .two-column {
    -moz-column-count: 2;
    -moz-column-gap: 20px;
    -webkit-column-count: 2;
    -webkit-column-gap: 20px;
    column-count: 2;
    column-gap: 20px;
  }

  // highlight active nav item
  body.home #nav-home a, body.nav-1 #nav-1 a,
  body.nav-2 #nav-2 a, body.nav-3 #nav-3 a,
  body.nav-4 #nav-4 a, body.nav-5 #nav-5 a,
  body.nav-6 #nav-6 a {
    border-bottom: 2px solid @su-red;
  }

  .image-caption.overlay { // USAGE: ensure containing element has position:relative and :hover .overlay { .opacity(1); }
    .opacity(0);
    transition: all .3s linear;
    position: absolute;
    bottom: 0;
    left: 0;
    color: @su-beige-05;
    background-color: rgba(0,0,0,.6);

    h4, p {
      color: @su-beige-05;
    }
  }
  #hero-image:hover {
    .overlay {
      .opacity(1);
    }
  }

  #global-footer {
    #bottom-text {
      ul {
        margin-bottom: .2em;
      }
      p.copyright {
        text-align: left;
      }
    }
  }

} // @media (min-width: @screen-md-min)


//////////////////////////
// small desktop
@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
  .size-detect-md { display:inline; }

  .navbar .nav > li {
    padding: 0 10px 0 0;

    & > a {
      font-size: 1.3em;
    }
  }

  #global-footer {
    #bottom-text{
      ul {
        &#primary-links {
          li {
            font-size: unit( round( (17 / unit(@font-size-base)), 5 ), em ); // 17px expressed as em's
          }
        }
        &#policy-links {
          li {
            font-size: unit( round( (15 / unit(@font-size-base)), 5 ), em ); // 15px expressed as em's
          }
        }
      }

      p.copyright {
        font-size: unit( round( (15 / unit(@font-size-base)), 5 ), em ); // 15px expressed as em's
      }
    }
  }
} // @media (min-width: @screen-md-min) and (max-width: @screen-md-max)


//////////////////////////
// big desktop
@media (min-width: @screen-lg-min) {
  .size-detect-lg { display:inline; }

  #global-footer {
    #bottom-text{
      ul {
        &#primary-links {
          li {
            font-size: unit( round( (18 / unit(@font-size-base)), 5 ), em ); // 18px expressed as em's
          }
        }
        &#policy-links {
          li {
            font-size: unit( round( (16 / unit(@font-size-base)), 5 ), em ); // 16px expressed as em's
          }
        }
      }

      p.copyright {
        font-size: unit( round( (16 / unit(@font-size-base)), 5 ), em ); // 16px expressed as em's
      }
    }
  }
} // @media (min-width: @screen-lg-min)

